# rust-image-processing-service

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 001_init.sql
src/: lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/application/: image_service.rs  mod.rs  user_service.rs
src/application/auth/: service.rs
src/core/: auth.rs  error.rs  jwt.rs  mod.rs  result.rs
src/domain/: image.rs  mod.rs  transformations.rs  user.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: image_repository.rs  mod.rs  postgres.rs  sqlite.rs
src/presentation/: mod.rs
src/presentation/routes/: mod.rs
uploads/: bbeb5bbe-ed9e-41c0-ab16-381b95b44170_test.txt
