[package]
name = "image-processing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # اضافه کردن
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
axum = { version = "0.7", features = ["multipart"] }
multer = "3.0"
bcrypt = "0.15"